describing remaining models

--- a/Possible_models_examples.ipynb
+++ b/Possible_models_examples.ipynb
@@ -845,7 +845,15 @@
     "\n",
     "###  Semi-supervised classification -> Intrinsically semi-supervised -> Perturbation-based -> <font color='green'>$\\Pi$-model</font>\n",
     "\n",
-    "### Opis"
+    "### Opis\n",
+    "\n",
+    "[A survey on semi supervised]\n",
+    "\n",
+    "Pi-Model to podejście w uczeniu półnadzorowanym, w którym zamiast porównywać aktywacje niezmienionego modelu macierzystego z aktywacjami modeli zaburzonych w funkcji kosztu, porównuje się bezpośrednio zaburzone modele. W tej metodzie szkolone są dwa zaburzone modele sieci neuronowej. Jako proces zaburzenia stosuje się \"dropout\". Celem jest minimalizacja różnic w aktywacjach ostatniej warstwy obu sieci, używając do tego błędu kwadratowego. Waga nienadzorowanego składnika w funkcji kosztu początkowo wynosi zero, ale jest stopniowo zwiększana. To podejście, nazywane Pi-modelem, można traktować jako prostą wersję pseudo-ansambli.\n",
+    "\n",
+    "[LAMDA-SSL]\n",
+    "\n",
+    "Pi Model, zaproponowany przez Laine i innych, różni się od UDA poprzez dwukrotne losowe augmentowanie danych. W tym modelu, wyniki obu augmentacji są używane jako dane wejściowe dla modelu sieci neuronowej w celu uzyskania wyników predykcji. Niezgodność wyników predykcji jest traktowana jako nienadzorowana strata. Ze względu na losowość procesu augmentacji, obie augmentacje dostarczają próbek, które są semantycznie podobne, ale mogą różnić się w cechach. Dzięki regularyzacji spójności, model jest w stanie produkować podobne wyniki predykcji dla różnych augmentacji w określonym zakresie."
    ]
   },
   {
@@ -1078,14 +1086,44 @@
     "\n",
     "###  Semi-supervised classification -> Intrinsically semi-supervised -> Perturbation-based -> <font color='green'>Temporal ensembling</font>\n",
     "\n",
-    "### Opis"
+    "### Opis\n",
+    "\n",
+    "[A survey]\n",
+    "\n",
+    "1. Model stochastyczny: Ze względu na szum używany w opisanych metodach, cały model sieci neuronowej można traktować jako stochastyczny.\n",
+    "\n",
+    "2. Kary za różnice: W modelu Π sieć jest regulowana poprzez nałożenie kary za różnice w wynikach dwóch zakłóconych modeli sieci, które korzystają z tych samych danych wejściowych. Można to rozszerzyć do więcej niż dwóch zakłóconych modeli.\n",
+    "\n",
+    "3. Porównanie zakłóconych i niezakłóconych modeli: Pseudo-zbiory rozwiązują problem porównywania wyników zakłóconych sieci z wynikami niezakłóconej sieci.\n",
+    "\n",
+    "4. Uśrednianie wyników: Laine i Aila (2017) proponują inną metodę łączenia wielu zakłóceń modelu sieci - porównują aktywacje sieci neuronowej w każdej epoce do aktywacji tej sieci z poprzednich epok. To jest realizowane poprzez zastosowanie wykładniczego średniej kroczącej wyników sieci z poprzednich epok.\n",
+    "\n",
+    "5. Powiązanie z innymi metodami: Chociaż \"Temporal Ensembling\" konceptualnie różni się od pewnych technik, jest powiązany z metodami takimi jak samoetykietowanie (self-labelling).\n",
+    "\n",
+    "Podsumowując, \"Temporal Ensembling\" to technika w uczeniu maszynowym, która polega na porównywaniu i uśrednianiu prognoz modelu sieci neuronowej z różnych etapów uczenia w celu uzyskania bardziej stabilnych i dokładnych wyników.\n",
+    "\n",
+    "[LAMDA-SSL]\n",
+    "\n",
+    "1. Ulepszenia względem modelu Pi: W modelu Pi, dla każdej niesklasyfikowanej próbki, model musi wykonywać dwie augmentacje i obliczać niespójność ich wyników predykcji, co wymaga dużej mocy obliczeniowej.\n",
+    "\n",
+    "2. EMA: Temporal Ensembling zmienia jedno z przewidywań etykiety pseudo-label na wykładniczą średnią ruchomą (EMA) historycznych etykiet pseudo-label. Jest to ważona średnia historycznych wyników, gdzie wagi etykiet pseudo-label maleją wykładniczo w każdej rundzie.\n",
+    "\n",
+    "3. Zachowanie informacji: Metoda ta skutecznie zachowuje informacje o historycznych etykietach pseudo-label i oblicza stratę nienadzorowaną poprzez porównanie aktualnej etykiety pseudo-label z zespołem historycznych etykiet pseudo-label. Zbiór historyczny jest aktualizowany po każdej epoce.\n",
+    "\n",
+    "4. Zapewnienie stabilności modelu: Dzięki zastosowaniu EMA model jest bardziej odporny. Chroni to model przed zbytnim wpływem pojedynczej rundy predykcji i spowalnia tempo, z jakim model zapomina historyczne informacje.\n",
+    "\n",
+    "5. Oszczędność mocy obliczeniowej: Temporal Ensembling wymaga jedynie jednego obliczenia ważonej średniej dla zachowania informacji historycznych, co znacznie zmniejsza zużycie energii w porównaniu z modelem Pi.\n",
+    "\n",
+    "Podsumowując, \"Temporal Ensembling\" to technika optymalizacji modelu uczenia maszynowego, która skupia się na wykorzystaniu historycznych informacji w procesie uczenia, jednocześnie zmniejszając zużycie mocy obliczeniowej."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
    "id": "c4759583",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1324,14 +1362,42 @@
     "\n",
     "###  Semi-supervised classification -> Intrinsically semi-supervised -> Perturbation-based -> <font color='green'>Mean teacher</font>\n",
     "\n",
-    "### Opis"
+    "### Opis\n",
+    "\n",
+    "[A survey]\n",
+    "\n",
+    "\"Mean Teacher\" to metoda używana podczas szkolenia sieci neuronowej z wykorzystaniem tzw. temporal ensembling, gdzie nieetykietowane dane są uwzględniane w procesie uczenia się w dużych odstępach czasu. Zamiast skupiać się na wartościach aktywacji dla każdego wprowadzenia raz na epokę, metoda ta skupia się na ruchomych średnich wag sieci.\n",
+    "\n",
+    "Kluczowe cechy metody \"Mean Teacher\" to:\n",
+    "\n",
+    "1. Oblicza wykładniczą średnią ruchomą wag podczas każdej iteracji treningu.\n",
+    "2. Porównuje aktywacje ostatniej warstwy używając najnowszych wag z aktywacjami uzyskanymi przy użyciu średnich wag.\n",
+    "3. Aby zwiększyć odporność modelu, dodaje szum do danych wejściowych.\n",
+    "4. Funkcja straty dla nieetykietowanego wprowadzenia jest określana przez różnicę pomiędzy dwiema wersjami zakłóconych danych.\n",
+    "5. Po backpropagation, aktualizuje wagi sieci z wykorzystaniem współczynnika spadku (decay rate).\n",
+    "6. Model z uśrednionymi wagami nazywa się modelem nauczyciela (\"teacher model\"), a najnowszy model z wagami to model ucznia (\"student model\").\n",
+    "\n",
+    "Terminologia \"nauczyciel\" i \"uczeń\" została przyjęta w literaturze przy budowie półnadzorowanych sieci neuronowych.\n",
+    "\n",
+    "[LAMDA-SSL]\n",
+    "\n",
+    "Metoda \"Mean Teacher\", zaproponowana przez Tarvainena i innych, opiera się na idei destylacji wiedzy. W tej metodzie wyniki predykcji modelu nauczyciela są używane jako pseudolabels, aby szkolić model ucznia, co pozwala na przenoszenie wiedzy z bardziej złożonego modelu na prostszy. Chociaż klasyczna metoda destylacji wiedzy ma na celu uproszczenie modelu, głównym celem metody \"Mean Teacher\" jest wykorzystanie nieetykietowanych danych w procesie uczenia.\n",
+    "\n",
+    "Kluczowe punkty metody \"Mean Teacher\":\n",
+    "\n",
+    "1. Model nauczyciela nie jest złożony. Zamiast tego wykonuje wykładniczą średnią ruchomą (EMA) parametrów opartych na modelu ucznia, co redukuje koszty obliczeniowe w porównaniu z klasyczną metodą destylacji wiedzy.\n",
+    "2. Podczas gdy metoda Temporal Ensembling wykonuje EMA na wynikach predykcji każdej rundy, \"Mean Teacher\" korzysta z EMA dla parametrów modelu.\n",
+    "3. Dla dużych zestawów danych historyczne informacje nie mogą być aktualizowane na bieżąco. \"Mean Teacher\" jednak aktualizuje historyczne informacje o parametrach modelu po każdym batchu treningowym, co czyni go bardziej elastycznym i ogólnym.\n",
+    "4. Ogólnie rzecz biorąc, \"Mean Teacher\" skutecznie rozwiązuje problem opóźnionych aktualizacji i wykorzystania historycznych informacji."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
    "id": "149cf9ba",
-   "metadata": {},
+   "metadata": {
+    "code_folding": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1560,7 +1626,39 @@
     "\n",
     "###  Semi-supervised classification -> Intrinsically semi-supervised -> Perturbation-based -> <font color='green'>Virtual Adversarial Training</font>\n",
     "\n",
-    "### Opis"
+    "### Opis\n",
+    "\n",
+    "[A survey]\n",
+    "\n",
+    "Virtual adversarial training (VAT) to metoda mająca na celu zwiększenie odporności sieci neuronowej na niewielkie zakłócenia w danych wejściowych. Istotnym aspektem VAT jest to, że uwzględnia kierunek tych zakłóceń w danych, co różni się od innych podejść opartych na zakłóceniach.\n",
+    "\n",
+    "Kluczowe punkty na temat Virtual adversarial training:\n",
+    "\n",
+    "1. Uwzględnienie kierunku zakłóceń: Większość podejść bazujących na zakłóceniach dąży do promowania odporności na niewielkie zakłócenia, nie uwzględniając ich kierunku. Jednak badania sugerują, że wrażliwość sieci neuronowych na zakłócenia jest często silnie zależna od kierunku tych zakłóceń.\n",
+    "\n",
+    "2. Procedura regularyzacji: Miyato i współpracownicy w 2018 roku zaproponowali procedurę, która uwzględnia kierunek zakłócenia. Dla każdego punktu danych, oznaczonego lub nieoznaczonego, przybliżają zakłócenie, które doprowadziłoby do największej zmiany w wynikach sieci (nazywane \"adversarial noise\"). Następnie dodają do funkcji straty termin, który penalizuje różnicę w wynikach sieci dla danych zakłóconych i niezakłóconych.\n",
+    "\n",
+    "3. Porównanie z tradycyjnym treningiem przeciwnym: W VAT, wyjścia dla zakłóconych danych są porównywane z prawdziwymi wyjściami, a nie z wyjściami dla niezakłóconych danych. Oznacza to, że VAT koncentruje się bardziej na uczniu, jak prawidłowo klasyfikować zakłócone dane, niż na karaniu modelu za źle klasyfikowanie danych zakłóconych.\n",
+    "\n",
+    "4. Rozszerzenia VAT: Istnieje również rozszerzenie VAT, które polega na zakłóceniu wag sieci, zamiast danych, przy użyciu tzw. \"dropout mask\".\n",
+    "\n",
+    "Podsumowując, Virtual adversarial training to zaawansowana technika treningowa dla sieci neuronowych, która ma na celu zwiększenie ich odporności na zakłócenia, uwzględniając kierunek tych zakłóceń. Metoda ta jest odpowiedzią na wykryte słabości w tradycyjnych metodach treningu przeciwnego.\n",
+    "\n",
+    "[LAMDA-SSL]\n",
+    "\n",
+    "1. Cel: VAT został zaproponowany przez Miyato i innych jako metoda dodawania sztucznego szumu do danych, tak aby model miał gorsze wyniki w obliczu pewnych zakłóceń. Dąży do znalezienia najgorszego scenariusza wynikającego z zakłóceń, co jest powiązane z ideą gry o sumie zerowej w teorii gier oraz problemem Min-Max w optymalizacji.\n",
+    "\n",
+    "2. Dwa rodzaje optymalizacji: W klasycznych algorytmach adwersarialnych, głównym celem jest minimalizacja różnicy (straty) między rzeczywistymi etykietami a prognozami. VAT korzysta z zewnętrznej optymalizacji do dostosowywania parametrów modelu i wewnętrznej optymalizacji do dostosowywania szumu. Zewnętrzna optymalizacja jest przeprowadzana przy użyciu gradient descent, podczas gdy wewnętrzna optymalizacja polega na szumie.\n",
+    "\n",
+    "3. Strategia spójności: W przypadku semi-nadzorowanych scenariuszy, gdzie straty dla nieoznakowanych danych są trudne do obliczenia, VAT stosuje strategię spójności. Model przewiduje etykiety dla czystych i zakłóconych danych, a następnie oblicza spójność między nimi.\n",
+    "\n",
+    "4. Aproksymacja drugiego rzędu: Zamiast korzystać z liniowej aproksymacji, VAT wykorzystuje aproksymację drugiego rzędu, co pozwala na przekształcenie problemu obliczeniowego w obliczenie głównych wektorów własnych macierzy Hessian dla szumu.\n",
+    "\n",
+    "5. Optymalizacja obliczeń: VAT stosuje metodę iteracji mocy do przybliżenia wektorów własnych macierzy Hessian, co pozwala uniknąć bezpośrednich obliczeń z tą macierzą.\n",
+    "\n",
+    "6. Zalety VAT: W porównaniu z innymi metodami, VAT oferuje lepszą odporność na zakłócenia i mniej losowości w wynikach eksperymentalnych. Dzięki użyciu aproksymacji, VAT unika nadmiernych obliczeń, rozwiązując problem zastosowania klasycznych metod adwersarialnych do nieoznakowanych danych.\n",
+    "\n",
+    "Koncepcja VAT skupia się na zwiększeniu odporności modelu na adwersarialne zakłócenia poprzez inteligentne dostosowywanie szumu i uwzględnienie spójności prognoz."
    ]
   },
   {
