--- a/Experiments.ipynb
+++ b/Experiments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "63a4b2cd",
    "metadata": {},
    "outputs": [],
@@ -23,6 +23,7 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.svm import LinearSVC\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
     "\n",
     "def preprocess_cifar10():\n",
     "    (X_train, y_train), (X_test, y_test) = cifar10.load_data()\n",
@@ -163,12 +164,15 @@
     "    return RandomForestClassifier()\n",
     "\n",
     "def linear_svc_factory():\n",
-    "    return LinearSVC(max_iter=10**4)\n"
+    "    return LinearSVC(max_iter=10**4)\n",
+    "\n",
+    "def gaussianNB_factory():\n",
+    "    return GaussianNB()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "id": "9e2f757a",
    "metadata": {
     "code_folding": [],
@@ -208,16 +212,14 @@
     "\n",
     "models_hyperparameters = {\n",
     "              'Tri_Training' : {\n",
-    "                  'base_estimator': knn_factory,\n",
-    "                  'base_estimator_2': random_forest_factory,\n",
-    "                  'base_estimator_3': linear_svc_factory\n",
+    "                  'base_estimator': random_forest_factory,\n",
+    "                  'base_estimator_2': linear_svc_factory,\n",
+    "                  'base_estimator_3': gaussianNB_factory\n",
     "                                }\n",
     "              ,'Assemble' : {\n",
-    "                  'T' : 10,\n",
     "                  'base_estimator' : random_forest_factory\n",
     "              }\n",
     "              ,'SemiBoost' : {\n",
-    "                  'T' : 10,\n",
     "                  'base_estimator' : random_forest_factory\n",
     "              }\n",
     "              ,'LapSVM' : {                  \n",
@@ -272,7 +274,7 @@
    "execution_count": 3,
    "id": "ec732b23",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -577,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 23,
    "id": "acc61546",
    "metadata": {},
    "outputs": [
@@ -585,7 +587,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Alghoritm: TSVM\n",
+      "Alghoritm: Tri_Training\n",
       "Dataset: cifar10\n",
       "X_labeled shape: (30, 32, 32, 1), X_unlabeled shape: (70, 32, 32, 1)\n",
       "y_labeled shape: (30, 1)\n",
@@ -593,10 +595,10 @@
       "X_train shape: (30, 1024), X_unlabeled shape: (70, 1024)\n",
       "y_train shape: (30,)\n",
       "Testing model\n",
-      "[0 1 0 0 1 0 1 0 0 1]\n",
-      "cifar10 Results: {'accuracy': 0.3, 'precision': 0.5, 'recall': 0.2857142857142857, 'f1_score': 0.36363636363636365, 'time': 0.4727356433868408}\n",
+      "[0 1 0 0 1 1 0 1 0 1]\n",
+      "cifar10 Results: {'accuracy': 0.4, 'precision': 0.6, 'recall': 0.42857142857142855, 'f1_score': 0.5, 'time': 1.306359052658081}\n",
       "\n",
-      "Alghoritm: TSVM\n",
+      "Alghoritm: Tri_Training\n",
       "Dataset: imdb\n",
       "X_labeled shape: (30, 1000), X_unlabeled shape: (70, 1000)\n",
       "y_labeled shape: (30,)\n",
@@ -604,10 +606,56 @@
       "X_train shape: (30, 1000), X_unlabeled shape: (70, 1000)\n",
       "y_train shape: (30,)\n",
       "Testing model\n",
-      "[0 0 0 0 0 0 1 0 0 0]\n",
-      "imdb Results: {'accuracy': 0.8, 'precision': 0.0, 'recall': 0.0, 'f1_score': 0.0, 'time': 0.4807136058807373}\n",
+      "[0 0 0 0 0 0 0 0 0 0]\n",
+      "imdb Results: {'accuracy': 0.9, 'precision': 0.0, 'recall': 0.0, 'f1_score': 0.0, 'time': 0.524864912033081}\n",
       "\n",
-      "Alghoritm: TSVM\n",
+      "Alghoritm: Tri_Training\n",
+      "Dataset: breast_cancer\n",
+      "X_labeled shape: (136, 30), X_unlabeled shape: (319, 30)\n",
+      "y_labeled shape: (136,)\n",
+      "Training model\n",
+      "X_train shape: (136, 30), X_unlabeled shape: (319, 30)\n",
+      "y_train shape: (136,)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\kaami\\appdata\\local\\programs\\python\\python37\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1308: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing model\n",
+      "[1 0 0 1 1 0 0 0 0 1 1 0 1 0 1 0 1 1 1 0 1 1 0 1 1 1 1 1 1 0 1 1 1 1 1 1 0\n",
+      " 1 0 1 1 0 1 1 1 1 1 1 1 1 0 0 1 1 1 1 1 0 0 1 1 0 0 1 1 1 0 0 1 1 0 0 1 0\n",
+      " 1 1 1 1 1 1 0 1 1 0 0 0 0 0 1 1 1 1 1 1 1 1 0 0 1 0 0 1 0 0 1 1 1 0 1 1 0\n",
+      " 1 1 0]\n",
+      "breast_cancer Results: {'accuracy': 0.9649122807017544, 'precision': 0.958904109589041, 'recall': 0.9859154929577465, 'f1_score': 0.9722222222222222, 'time': 0.4549381732940674}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for dataset_name, preprocess_function in datasets.items():\n",
+    "    train_model('Tri_Training', Tri_Training, dataset_name, preprocess_function, labeled_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "abe85c98",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alghoritm: SemiBoost\n",
       "Dataset: breast_cancer\n",
       "X_labeled shape: (136, 30), X_unlabeled shape: (319, 30)\n",
       "y_labeled shape: (136,)\n",
@@ -615,18 +663,17 @@
       "X_train shape: (136, 30), X_unlabeled shape: (319, 30)\n",
       "y_train shape: (136,)\n",
       "Testing model\n",
-      "[1 0 0 1 1 0 0 0 0 1 1 0 1 0 1 0 1 1 1 0 1 1 0 1 1 1 1 1 1 0 1 1 1 1 1 1 0\n",
-      " 1 0 1 1 0 1 1 1 1 1 1 1 1 0 0 0 1 1 1 1 0 0 1 1 0 0 1 1 1 0 0 1 1 0 0 1 0\n",
-      " 1 1 1 1 1 1 0 1 0 0 0 0 0 0 1 1 1 0 1 1 1 1 0 0 1 0 0 1 0 0 1 1 1 0 1 1 0\n",
+      "[1 0 1 1 1 0 0 1 1 1 1 1 1 1 1 0 1 1 1 0 1 1 0 1 1 1 1 1 1 0 1 1 1 1 1 1 1\n",
+      " 1 0 1 1 1 1 1 1 1 1 1 1 1 1 0 1 1 1 1 1 0 1 1 1 0 0 1 1 1 0 0 1 1 1 0 1 0\n",
+      " 1 1 1 1 1 1 1 1 1 0 1 0 0 0 1 1 1 1 1 1 1 1 0 0 1 0 1 1 0 0 1 1 1 0 1 1 1\n",
       " 1 1 0]\n",
-      "breast_cancer Results: {'accuracy': 0.956140350877193, 'precision': 0.9714285714285714, 'recall': 0.9577464788732394, 'f1_score': 0.9645390070921985, 'time': 0.6429424285888672}\n",
+      "breast_cancer Results: {'accuracy': 0.8596491228070176, 'precision': 0.8160919540229885, 'recall': 1.0, 'f1_score': 0.8987341772151899, 'time': 2.347670793533325}\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "for dataset_name, preprocess_function in datasets.items():\n",
-    "    train_model('TSVM', TSVM, dataset_name, preprocess_function, labeled_size)"
+    "train_model('Tri_Training', Tri_Training, 'breast_cancer', preprocess_breast_cancer, labeled_size)"
    ]
   },
   {
